# msys2-perl-package-creator

./: .gitignore  constants.py  main.py  pacdb.py  pkgbuild.py  pyproject.toml  utils.py
pkgbuild-template/: PKGBUILD.template.sh
