[tool.poetry]
name = "mingw-perl-package-creator"
version = "0.1.0"
description = "Creates PKGBUILD for perl packages"
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
